--- a/report/references.bib
+++ b/report/references.bib
@@ -6,3 +6,16 @@
 	year = {2024}
 }
 
+@misc{DS18B20_datasheet,
+	author = {Maxim Integrated},
+	title = {DS18B20 Programmable Resolution 1-Wire Digital Thermometer},
+	howpublished = {\url{https://datasheets.maximintegrated.com/en/ds/DS18B20.pdf}},
+	year = {2019}
+}
+
+@misc{ESP-IDF-Programming-Guide,
+	author = {Espressif Systems},
+	title = {ESP-IDF Programming Guide},
+	howpublished = {\url{https://docs.espressif.com/projects/esp-idf/en/latest/esp32/index.html}},
+	year = {2024}
+}
