--- a/report/references.bib
+++ b/report/references.bib
@@ -19,3 +19,10 @@
 	howpublished = {\url{https://docs.espressif.com/projects/esp-idf/en/latest/esp32/index.html}},
 	year = {2024}
 }
+
+@misc{LM35_datasheet,
+	author = {Texas Instruments},
+	title = {LM35 Precision Centigrade Temperature Sensors},
+	howpublished = {\url{https://www.ti.com/en/ds/DS18B20.pdf}},
+	year = {AUGUST 1999 – REVISED DECEMBER 2017}
+}
