--- a/report/references.bib
+++ b/report/references.bib
@@ -24,5 +24,12 @@
 	author = {Texas Instruments},
 	title = {LM35 Precision Centigrade Temperature Sensors},
 	howpublished = {\url{https://www.ti.com/en/ds/DS18B20.pdf}},
-	year = {AUGUST 1999 – REVISED DECEMBER 2017}
+	year = {2017}
+}
+
+@misc{NTC_datasheet,
+	author = {EPCOS},
+	title = {NTC thermistors for temperature measurement},
+	howpublished = {\url{https://www.tme.eu/Document/7f93a3d121ea8402378cf8bc6239e8d2/B57164K104J-EPCOS-datasheet-10192.pdf}},
+	year = {2006}
 }
