--- a/report/references.bib
+++ b/report/references.bib
@@ -33,3 +33,11 @@
 	howpublished = {\url{https://www.tme.eu/Document/7f93a3d121ea8402378cf8bc6239e8d2/B57164K104J-EPCOS-datasheet-10192.pdf}},
 	year = {2006}
 }
+
+@misc{ESP32_microcontroller,
+ 
+	author = {Alexander Maier,Yuriy Vagapov, Andrew Sharp},
+    title        = {Comparative Analysis and Practical Implementation of the ESP32 Microcontroller Module for the Internet of Things - Scientific Figure on ResearchGate},
+    howpublished = {\url{https://www.researchgate.net/figure/Microcontroller-flowchart_fig5_320273388}},
+	year = {2006}
+}
