--- a/report/main.tex
+++ b/report/main.tex
@@ -757,7 +757,7 @@ In order to improve the accuracy of the temperature readings, a multisampling te
 
     The experimental tests were conducted to evaluate the performance and accuracy of the temperature sensing system. The primary objective was to verify the functionality of the three different sensors—NTC thermistor, LM35, and DS18B20—and compare their responses under controlled temperature changes.
 
-    To simulate real-world temperature variations, the sensors were placed together in close proximity, and hot air was used to gradually heat them. This method allowed us to observe how each sensor responded to increasing temperatures in real time and to measure the accuracy of the readings obtained from the ESP32’s ADC. The system's outputs were displayed on the graphical user interface (GUI), providing a direct comparison between the temperature readings from the different sensors.
+    To simulate real-world temperature variations, the sensors were placed together in close proximity, and hot air was used to gradually heat them. This method allowed us to observe how each sensor responded to increasing temperatures in real time and to measure the accuracy of the readings obtained from the ESP32's ADC. The system's outputs were displayed on the graphical user interface (GUI), providing a direct comparison between the temperature readings from the different sensors.
 
 
 
